2002-04-24  Cengiz Gunay  <cengiz@ull.edu>

	* utils (Repository): Improved documentation and made major changes in Iteration and 
	StringTask. This package should be moved out of neuroidnet since they are independent of 
	the neuroidal simulator.

	* ntr/plots (Repository): Fixed bugs with ranges, etc. Refined plots, enabled multiple 
	windows. Need to move this package out of neuroidnet.

	* ntr/WeightedPotentialPlot.java (Repository): new plot for potential plot with
	weight profile.

	* ntr/PotentialPlot.java (Repository): new plot for raw potential plot of a synapse.

	* ntr/MembranePotentialPlot.java (Repository): new plot for total neuroid potential.

2002-04-15  Cengiz Gunay  <cengiz@ull.edu>

	* ntr/plots (Repository): Grapher independent plotting system. Second revision.
	Still needs improvement by adding new graphs. Currently supports spike and
	profile plots.

	* scripts (Repository): Contains BeanShell scripts that aid simulation of the network.

2002-04-11  Cengiz Gunay  <cengiz@ull.edu>

	* utils/StringTask.java (Repository): New Task to make easier iteration tasks
	that need to accumulate a string value that will eventually be returned.

	* ntr (Repository): Added a new way to record changes and provide offline 
	visualization of this information. See new package neuroidnet.ntr.plots.

2002-03-24  Cengiz Gunay  <cengiz@ull.edu>

	* neuroidnet (Repository): New base package "neuroidnet". Subpackages are also updated.
	
	* ntr (Repository): Changed package name to "neuroidnet.ntr"
	Changed AxonArbor to attach itself to its srcNeuroid. Various funcs
	in Area no longer returns AxonArbor.
	Area.axons is now a Vector of AxonArbors. Still needs to be correctly
	treated by Area.fire()

2002-03-05  Cengiz Gunay  <cengiz@ull.edu>

	* PhaseSegregator/Peripheral.java (Repository): Uses the new Peripheral.

	* PhaseSegregator/Network.java (Repository): Uses the new Network.
